<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create_Account">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/input_field_margin"
        android:layout_marginTop="@dimen/first_input_field_margin"
        android:layout_marginEnd="@dimen/input_field_margin"
        android:ems="10"
        android:inputType="text"
        android:hint="Full Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/between_input_field_margin"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@id/editTextText"
         />


    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/between_input_field_margin"
        app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/editTextTextEmailAddress"
         />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        android:layout_marginTop="@dimen/between_input_field_margin"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="379dp" />


    <Button
        android:id="@+id/back_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="Back"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/between_input_field_margin"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        />
    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:layout_marginTop="@dimen/between_input_field_margin"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword2"/>


</androidx.constraintlayout.widget.ConstraintLayout>