<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <TextView
        android:id="@+id/loginTextViewHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_header"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/header_margin_top"
        android:gravity="center"
        />



    <EditText
        android:id="@+id/usernameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="Email"
        android:layout_marginStart="@dimen/input_field_margin"
        android:layout_marginEnd="@dimen/input_field_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTextViewHeader"
        android:layout_marginTop="@dimen/header_margin_top"
        />


    <EditText
        android:id="@+id/passwordText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Password"
        app:layout_constraintEnd_toEndOf="@+id/usernameText"
        app:layout_constraintStart_toStartOf="@+id/usernameText"
        app:layout_constraintTop_toBottomOf="@+id/usernameText"
        android:layout_marginTop="@dimen/between_input_field_margin"

        />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="Login"
        app:layout_constraintEnd_toEndOf="@+id/passwordText"
        app:layout_constraintStart_toStartOf="@+id/passwordText"
        app:layout_constraintTop_toBottomOf="@+id/passwordText"
        android:layout_marginTop="@dimen/button_margin_top"


        />

    <TextView
        android:id="@+id/creactaccount_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:text="New User?"
        app:layout_constraintEnd_toStartOf="@+id/createaccount_button"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="@+id/passwordText"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton" />

    <Button
        android:id="@+id/createaccount_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/between_input_field_margin"
        android:text="Create Account"
        app:layout_constraintBottom_toBottomOf="@+id/creactaccount_textview"
        app:layout_constraintEnd_toEndOf="@+id/passwordText"
        app:layout_constraintHorizontal_weight="7"
        app:layout_constraintStart_toEndOf="@+id/creactaccount_textview"
        app:layout_constraintTop_toTopOf="@+id/creactaccount_textview"
        app:layout_constraintVertical_bias="0.762" />


</androidx.constraintlayout.widget.ConstraintLayout>